// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TopReasonsSelection > renders correctly 1`] = `
<div>
  <span
    class="text-label-small text-secondary-text"
  >
    Most used reasons
  </span>
  <v-card-stub
    border="false"
    class="rounded-0"
    density="default"
    disabled="false"
    exact="false"
    flat="true"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="justify-start my-1"
    >
      
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="false"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 1"
        size="default"
        type="primary"
        value="1"
      />
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="false"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 2"
        size="default"
        type="primary"
        value="2"
      />
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="true"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 3"
        size="default"
        type="primary"
        value="3"
      />
      
    </div>
  </v-card-stub>
</div>
`;

exports[`TopReasonsSelection > renders correctly on mobile view 1`] = `
<div>
  <span
    class="text-label-small text-secondary-text"
  >
    Most used reasons
  </span>
  <v-card-stub
    border="false"
    class="px-2 mt-2"
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="justify-start my-1"
    >
      
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="false"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 1"
        size="small"
        type="primary"
        value="1"
      />
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="false"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 2"
        size="small"
        type="primary"
        value="2"
      />
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="true"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 3"
        size="small"
        type="primary"
        value="3"
      />
      
    </div>
  </v-card-stub>
</div>
`;

exports[`TopReasonsSelection > renders correctly when topReasonsLoading is true 1`] = `
<div>
  <span
    class="text-label-small text-secondary-text"
  >
    Most used reasons
  </span>
  <v-card-stub
    border="false"
    class="rounded-0"
    density="default"
    disabled="false"
    exact="false"
    flat="true"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <v-progress-linear-stub
      absolute="false"
      active="true"
      buffervalue="0"
      chunkgap="4"
      clickable="false"
      color="primary"
      height="4"
      indeterminate="true"
      location="top"
      max="100"
      modelvalue="0"
      reverse="false"
      roundedbar="false"
      stream="false"
      striped="false"
      tag="div"
      tile="false"
    />
  </v-card-stub>
</div>
`;

exports[`TopReasonsSelection > renders correctly with no reasons 1`] = `
<div>
  <!--v-if-->
  <!--v-if-->
</div>
`;

exports[`TopReasonsSelection > renders correctly with selected reason 1`] = `
<div>
  <span
    class="text-label-small text-secondary-text"
  >
    Most used reasons
  </span>
  <v-card-stub
    border="false"
    class="rounded-0"
    density="default"
    disabled="false"
    exact="false"
    flat="true"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="justify-start my-1"
    >
      
      <evocon-v-chip-stub
        active="false"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="false"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 1"
        size="default"
        type="primary"
        value="1"
      />
      <evocon-v-chip-stub
        active="true"
        allowgrow="false"
        class="my-1 mr-2"
        dark="false"
        disabled="true"
        error="false"
        icon=""
        iconclass=""
        imgsrc=""
        label="Reason 2"
        size="default"
        type="primary"
        value="2"
      />
      
    </div>
  </v-card-stub>
</div>
`;
